handler get tasks
